link multi form to buisness navbar section

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <ul class="menu-items">
             <li><a href="#"><span>Home</span></a></li>
             <li><a href="#"><span>Favourite</span></a></li>
-            <li><a href="#"><span>Business</span></a></li>
+            <li><a href="./Multi steps form/business.html"><span>Business</span></a></li>
             <li><a href="#"><span>Login/Signup</span></a></li>
           </ul>
           <!-- <div class="search-bar">
