add links to redirect

--- a/Groccery.html
+++ b/Groccery.html
@@ -35,9 +35,9 @@
       <div class="my-container navbar-container">
         <h1 class="logo"><span class="circular"></span> &nbsp; Title</h1>
         <ul class="menu-items">
-          <li><a href="#"><span>Home</span></a></li>
+          <li><a href="./index.html"><span>Home</span></a></li>
           <li><a href="#"><span>Favourite</span></a></li>
-          <li><a href="#"><span>Business</span></a></li>
+          <li><a href="./Multi steps form/business.html"><span>Business</span></a></li>
           <li><a href="#"><span>Login/Signup</span></a></li>
         </ul>
       </div>
