--- a/Multi steps form/business.html
+++ b/Multi steps form/business.html
@@ -18,13 +18,13 @@
         <h1 class="logo"><span class="circular"></span> &nbsp; Title</h1>
         <ul class="menu-items">
           <li>
-            <a href="#"><span>Home</span></a>
+            <a href="../index.html"><span>Home</span></a>
           </li>
           <li>
             <a href="#"><span>Explore</span></a>
           </li>
           <li>
-            <a class="bottom-line" href="#"><span>Business</span></a>
+            <a class="bottom-line" href="./Multi steps form/business.html"><span>Business</span></a>
           </li>
           <li>
             <a href="#"><span>Login/Signup</span></a>
