--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="my-container navbar-container">
           <h1 class="logo"><span class="circular"></span> &nbsp; Title</h1>
           <ul class="menu-items">
-            <li><a href="#"><span>Home</span></a></li>
+            <li><a href="./index.html"><span>Home</span></a></li>
             <li><a href="#"><span>Favourite</span></a></li>
             <li><a href="./Multi steps form/business.html"><span>Business</span></a></li>
             <li><a href="#"><span>Login/Signup</span></a></li>
@@ -111,14 +111,18 @@
 
       <div class="container-my-carousel">
         <div class="owl-carousel owl-theme dot-carousel">
-          <div class="item">
-            <img src="./img/food.svg" alt="">
-            <p>Food</p>
-          </div>
-          <div class="item">
-            <img src="./img/Groccery.svg" alt="">
-            <p>Groccery</p>
-          </div>
+          <a href="./explore.html">
+            <div class="item">
+              <img src="./img/food.svg" alt="">
+              <p>Food</p>
+            </div>
+          </a>
+          <a href="./Groccery.html">
+            <div class="item">
+              <img src="./img/Groccery.svg" alt="">
+              <p>Groccery</p>
+            </div>
+          </a>
           <div class="item">
             <img src="./img/Education.svg" alt="">
             <p>Education</p>
