--- a/Multi steps form/business.html
+++ b/Multi steps form/business.html
@@ -24,7 +24,9 @@
             <a href="#"><span>Explore</span></a>
           </li>
           <li>
-            <a class="bottom-line" href="./Multi steps form/business.html"><span>Business</span></a>
+            <a class="bottom-line" href="./Multi steps form/business.html"
+              ><span>Business</span></a
+            >
           </li>
           <li>
             <a href="#"><span>Login/Signup</span></a>
@@ -42,7 +44,7 @@
             </div>
             <p class="first-para-status">Step 1</p>
             <!-- <div class="check fas fa-check"></div> -->
-            <img class="check" src="tick icon_selected.svg" alt="">
+            <img class="check" src="tick icon_selected.svg" alt="" />
           </div>
           <div class="step">
             <div class="bullet second-bullet-status">
@@ -50,7 +52,7 @@
             </div>
             <p class="second-para-status">Step 2</p>
             <!-- <div class="check fas fa-check"></div> -->
-            <img class="check" src="tick icon_selected.svg" alt="">
+            <img class="check" src="tick icon_selected.svg" alt="" />
           </div>
           <div class="step">
             <div class="bullet third-bullet-status">
@@ -58,7 +60,7 @@
             </div>
             <p class="third-para-status">Step 3</p>
             <!-- <div class="check fas fa-check"></div> -->
-            <img class="check" src="tick icon_selected.svg" alt="">
+            <img class="check" src="tick icon_selected.svg" alt="" />
           </div>
           <div class="step">
             <div class="bullet fourth-bullet-status">
@@ -66,24 +68,119 @@
             </div>
             <p class="fourth-para-status">Step 4</p>
             <!-- <div class="check fas fa-check"></div> -->
-            <img class="check" src="tick icon_selected.svg" alt="">
+            <img class="check" src="tick icon_selected.svg" alt="" />
           </div>
         </div>
         <div class="form-outer">
           <form>
+            <!-- ------------------------ first screen lets start ----------------------  -->
             <div class="page slide-page">
               <div class="front-page">
                 <h1>Welcome to GoLokal</h1>
                 <p>
-                  Lorem ipsum dolor sit amet, consetetur sadiadp ab elitr, sed
-                  diam nonumy eirmod tempororyaef invidunt. it amet, consetetur
-                  sadiadp ab elitr, sed diam nonumy eirmod tempororyaef fasd
-                  invidunt.
+                  One-stop solution for all your local search is here -
+                  GoLokal,India's youngest and fastest growing Local Search
+                  engine
                 </p>
+                <button class="welcome-start">Let’s Start</button>
+                <a href="../index.html" class="skip-btn">Skip</a>
+              </div>
+            </div>
+            <!-- ------------------------ first screen lets start end ----------------------  -->
+            <!-- ------------- mobile screen start ------------------------------------- -->
+            <div class="page slide-page">
+              <div class="mobile-number">
+                <h1>Enter your mobile number</h1>
+                <input
+                  id="mobile-input"
+                  class="mobile-input"
+                  type="tel"
+                  maxlength="10"
+                  pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"
+                  required
+                />
+                <button class="mobile-submit" onclick="OTPCount()">
+                  Submit
+                </button>
+              </div>
+            </div>
+            <!-- ---------------------------- end -------------------------------------- -->
+            <!-- ------------------------ OTP screen start ----------------------  -->
+            <div class="page slide-page">
+              <div class="back-button">
+                <img src="./BackButton.svg" alt="" />
+                <span>Back</span>
+              </div>
+              <div class="OTP-screen">
+                <h1>Enter OTP</h1>
+                <p>
+                  Login with a mobile OTP. This is all that we will ever ask
+                  from you!!
+                </p>
+                <div class="otp-number">
+                  <input class="otp-text" type="text" />
+                  <input class="otp-text" type="text" />
+                  <input class="otp-text" type="text" />
+                  <input class="otp-text" type="text" />
+                  <input class="otp-text" type="text" />
+                  <input class="otp-text" type="text" />
+                </div>
+                <span id="resend-otp" class="resend-otp" onclick="OTPCount()"
+                  >Resend OTP</span
+                >
+                <span id="otp-count" class="otp-count">00:59 sec</span>
+                <button class="otp-submit">Submit</button>
+              </div>
+            </div>
+            <!-- ------------------------ OTP screen end ----------------------  -->
+            <!-- ------------------------ welcome to go lokal start ----------------------  -->
+            <div class="page slide-page">
+              <div class="welcome-golokal">
+                <h1>Welcome to GoLokal</h1>
+                <p>Expand your business with GoLokal in 4 easy steps!!</p>
+                <div class="business-form-list">
+                  <div class="details">
+                    <input
+                      type="checkbox"
+                      id="details-1"
+                      name="details-1"
+                      value="Business/Service details"
+                      disabled
+                    />
+                    <label for="details-1">Business/Service details</label>
+                  </div>
+                  <div class="details">
+                    <input
+                      type="checkbox"
+                      id="details-2"
+                      name="details-2"
+                      value="Contact details"
+                    />
+                    <label for="details-2">Contact details</label>
+                  </div>
+                  <div class="details">
+                    <input
+                      type="checkbox"
+                      id="details-3"
+                      name="details-3"
+                      value="Address details"
+                    />
+                    <label for="details-3">Address details</label>
+                  </div>
+                  <div class="details">
+                    <input
+                      type="checkbox"
+                      id="details-4"
+                      name="details-4"
+                      value="Verification details"
+                    />
+                    <label for="details-4">Verification details</label>
+                  </div>
+                </div>
                 <button class="lets-start">Let’s Start</button>
               </div>
             </div>
-
+            <!-- ------------------------ welcome to go lokal start end ----------------------  -->
             <div class="page">
               <div class="form-width">
                 <div class="title">Business/Service details</div>
@@ -96,13 +193,13 @@
                   <input type="text" placeholder="Business name" />
                 </div>
                 <div class="field">
-                  <img src="Dropdoen icon.svg" alt="">
+                  <img src="Dropdoen icon.svg" alt="" />
                   <select name="" id="">
                     <option value="">Business/Service category</option>
                   </select>
                 </div>
                 <div class="field">
-                  <img src="Add photo icon.svg" alt="">
+                  <img src="Add photo icon.svg" alt="" />
                   <input type="text" placeholder="Business photos" />
                 </div>
                 <div class="field">
@@ -327,9 +424,19 @@
       </div>
       <div class="footer-right">
         <p>Follow Us on</p>
-        <a href="https://www.facebook.com/profile.php?id=100007581765090" target="_blank"><i class="fab fa-facebook fa-2x"></i></a>
-        <a href="https://twitter.com/SangleShailesh" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
-        <a href="https://www.instagram.com/sangleshailesh?r=nametag" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
+        <a
+          href="https://www.facebook.com/profile.php?id=100007581765090"
+          target="_blank"
+          ><i class="fab fa-facebook fa-2x"></i
+        ></a>
+        <a href="https://twitter.com/SangleShailesh" target="_blank"
+          ><i class="fab fa-twitter fa-2x"></i
+        ></a>
+        <a
+          href="https://www.instagram.com/sangleshailesh?r=nametag"
+          target="_blank"
+          ><i class="fab fa-instagram fa-2x"></i
+        ></a>
       </div>
     </footer>
     <script src="business.js"></script>
