add OTP and validation API call

--- a/Multi steps form/business.html
+++ b/Multi steps form/business.html
@@ -44,7 +44,7 @@
             </div>
             <p class="first-para-status">Step 1</p>
             <!-- <div class="check fas fa-check"></div> -->
-            <img class="check" src="tick icon_selected.svg" alt="" />
+            <img class="check" src="right-arrow-circle.svg" />
           </div>
           <div class="step">
             <div class="bullet second-bullet-status">
@@ -52,7 +52,7 @@
             </div>
             <p class="second-para-status">Step 2</p>
             <!-- <div class="check fas fa-check"></div> -->
-            <img class="check" src="tick icon_selected.svg" alt="" />
+            <img class="check" src="right-arrow-circle.svg" alt="" />
           </div>
           <div class="step">
             <div class="bullet third-bullet-status">
@@ -60,7 +60,7 @@
             </div>
             <p class="third-para-status">Step 3</p>
             <!-- <div class="check fas fa-check"></div> -->
-            <img class="check" src="tick icon_selected.svg" alt="" />
+            <img class="check" src="right-arrow-circle.svg" alt="" />
           </div>
           <div class="step">
             <div class="bullet fourth-bullet-status">
@@ -68,7 +68,7 @@
             </div>
             <p class="fourth-para-status">Step 4</p>
             <!-- <div class="check fas fa-check"></div> -->
-            <img class="check" src="tick icon_selected.svg" alt="" />
+            <img class="check" src="right-arrow-circle.svg" alt="" />
           </div>
         </div>
         <div class="form-outer">
@@ -94,14 +94,10 @@
                 <input
                   id="mobile-input"
                   class="mobile-input"
-                  type="tel"
-                  maxlength="10"
-                  pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"
+                  type="number"
                   required
                 />
-                <button class="mobile-submit" onclick="OTPCount()">
-                  Submit
-                </button>
+                <button class="mobile-submit">Submit</button>
               </div>
             </div>
             <!-- ---------------------------- end -------------------------------------- -->
@@ -118,7 +114,7 @@
                   from you!!
                 </p>
                 <div class="otp-number">
-                  <input class="otp-text" type="text" />
+                  <input id="first-digit" class="otp-text" type="text" />
                   <input class="otp-text" type="text" />
                   <input class="otp-text" type="text" />
                   <input class="otp-text" type="text" />
@@ -192,20 +188,148 @@
                   <!-- <div class="label">Last Name</div> -->
                   <input type="text" placeholder="Business name" />
                 </div>
-                <div class="field">
-                  <img src="Dropdoen icon.svg" alt="" />
+                <!-- <div class="field">
+                  <img src="./Dropdown-arrow.svg" alt="" />
                   <select name="" id="">
                     <option value="">Business/Service category</option>
                   </select>
+                </div> -->
+                <div class="dropdown-category" onclick="toggleDropdown()">
+                  <p>Business/Service category *</p>
+                  <img src="./Dropdown-arrow.svg" alt="" />
+                </div>
+
+                <div
+                  class="dropSection"
+                  id="dropdownList"
+                  style="display: none"
+                >
+                  <div class="drop-heading" onclick="toggleDropdown2()">
+                    <h4>Business/Service category</h4>
+                    <img src="./cross-with-circle.svg" alt="" />
+                  </div>
+                  <div class="drop-section">
+                    <div class="option" data-attribute="category1">
+                      <p>Category 1</p>
+                      <img id="categoryOne" src="./right-sign.svg" alt="" />
+                    </div>
+                    <div class="option" data-attribute="category2">
+                      <p>Category 2</p>
+                      <img id="categoryTwo" src="./right-sign.svg" alt="" />
+                    </div>
+                    <div class="option" data-attribute="category3">
+                      <p>Category 3</p>
+                      <img id="categoryThree" src="./right-sign.svg" alt="" />
+                    </div>
+                    <div class="option" data-attribute="category4">
+                      <p>Category 4</p>
+                      <img id="categoryFour" src="./right-sign.svg" alt="" />
+                    </div>
+                    <div class="option" data-attribute="category5">
+                      <p>Category 5</p>
+                      <img id="categoryFive" src="./right-sign.svg" alt="" />
+                    </div>
+                    <div class="option" data-attribute="category6">
+                      <p>Category 6</p>
+                      <img id="categorySix" src="./right-sign.svg" alt="" />
+                    </div>
+                    <div class="option" data-attribute="category7">
+                      <p>Category 7</p>
+                      <img id="categorySeven" src="./right-sign.svg" alt="" />
+                    </div>
+                    <div class="option" data-attribute="category8">
+                      <p>Category 8</p>
+                      <img id="categoryEight" src="./right-sign.svg" alt="" />
+                    </div>
+                    <div class="option" data-attribute="category9">
+                      <p>Category 9</p>
+                      <img id="categoryNine" src="./right-sign.svg" alt="" />
+                    </div>
+                    <div class="option" data-attribute="category10">
+                      <p>Category 10</p>
+                      <img id="categoryTen" src="./right-sign.svg" alt="" />
+                    </div>
+                    <div class="option removeLine" data-attribute="category11">
+                      <p>Category 11</p>
+                      <img id="categoryEleven" src="./right-sign.svg" alt="" />
+                    </div>
+                    <button class="button" onClick="toggleDropdown2()">
+                      Done
+                    </button>
+                  </div>
                 </div>
                 <div class="field">
-                  <img src="Add photo icon.svg" alt="" />
+                  <img src="Add-photo-icon.svg" alt="" />
                   <input type="text" placeholder="Business photos" />
                 </div>
-                <div class="field">
-                  <select name="" id="">
-                    <option value="">Business/Service timings</option>
-                  </select>
+                <!-- --------------- days dropdown -------------  -->
+
+                <div
+                  class="days-dropdown-category"
+                  onclick="toggleDaysDropdown()"
+                >
+                  <p>Business days *</p>
+                  <img src="./Dropdown-arrow.svg" alt="" />
+                </div>
+
+                <div
+                  class="days-dropSection"
+                  id="dropdownDaysList"
+                  style="display: none"
+                >
+                  <div
+                    class="days-drop-heading"
+                    onclick="toggleDaysDropdown2()"
+                  >
+                    <h4>Business days</h4>
+                    <img src="./cross-with-circle.svg" alt="" />
+                  </div>
+                  <div class="days-dropdownPara">
+                    <p>Please unselect the non business days</p>
+                  </div>
+                  <div class="days-section">
+                    <div class="days" data-attribute="dayOne">
+                      <p>Monday</p>
+                      <img id="categoryOne" src="./right-sign.svg" alt="" />
+                    </div>
+                    <div class="days" data-attribute="dayTwo">
+                      <p>Tuesday</p>
+                      <img id="categoryTwo" src="./right-sign.svg" alt="" />
+                    </div>
+                    <div class="days" data-attribute="dayThree">
+                      <p>Wednesday</p>
+                      <img id="categoryThree" src="./right-sign.svg" alt="" />
+                    </div>
+                    <div class="days" data-attribute="dayFour">
+                      <p>Thursday</p>
+                      <img id="categoryFour" src="./right-sign.svg" alt="" />
+                    </div>
+                    <div class="days" data-attribute="dayFive">
+                      <p>Friday</p>
+                      <img id="categoryFive" src="./right-sign.svg" alt="" />
+                    </div>
+                    <div class="days" data-attribute="daySix">
+                      <p>Saturday</p>
+                      <img id="categorySix" src="./right-sign.svg" alt="" />
+                    </div>
+                    <div class="days removeLine" data-attribute="daySeven">
+                      <p>Sunday</p>
+                      <img id="categorySeven" src="./right-sign.svg" alt="" />
+                    </div>
+                    <div class="businessTime">
+                      <p>Business timings</p>
+                    </div>
+                    <div class="startTime">
+                      <label for="start">Start time</label>
+                      <input type="time" id="start" name="start" />
+                      <label for="end">End time</label>
+                      <input type="time" id="end" name="end" />
+                    </div>
+
+                    <button class="button" onClick="toggleDaysDropdown2()">
+                      Done
+                    </button>
+                  </div>
                 </div>
               </div>
               <div class="side-field">
